@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.995-9
-Date: 2006-03-31
+Version: 0.995-10
+Date: 2006-04-19
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
